--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "gsap": "^3.12.7",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
